# cpp-pic

./: CMakeLists.txt  README.md  artice.txt
.github/workflows/: build.yml
cmake/: base64_encode.cmake  verify_no_rdata.cmake
docs/: architecture.md  platform_guide.md
include/runtime/: runtime.h
include/runtime/platform/: allocator.h  platform.h
include/runtime/primitives/: int64.h  int64_common.h  primitives.h  uint64.h
src/: start.cc
src/runtime/platform/: allocator.cc
tests/: double_tests.h
